--- a/src/main/resources/templates/evolucoesListar.html
+++ b/src/main/resources/templates/evolucoesListar.html
@@ -1,4 +1,11 @@
-<div class="container">
+<div>
+    Para buscar a evolucao de cada paciente, selecione o paciente e clique em buscar.
+    <select th:each="evolucao:${evolucoes}">
+        <option th:value="${evolucao.paciente.cpf}" th:text="${evolucao.paciente.nome}"></option>
+    </select>
+</div>
+
+<div class="container" id="evall">
     <table class="table">
         <thead>
         <tr>
