--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
+    <script src="https://kit.fontawesome.com/59c7b81ae9.js" crossorigin="anonymous"></script>
     <title>Inicio</title>
 </head>
 <body>
@@ -16,7 +16,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar navbar-light" style="background-color: #e3f2fd;">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index">Inicio</a>
+            <a th:href="@{/index}"><span style="border: 1px solid silver; border-radius: 0.25em; padding: 0.5em;"><i class="fa-solid fa-house fa-fw" title="Home"></i></span></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -70,19 +70,14 @@
 </header>
 </section>
 <div class="container " id="conteudo">
-    <h1 class="d-flex justify-content-center">Bem vindo a pagina inicial do sistema</h1>
+    <h1 class="d-flex justify-content-center">Bem vindo a pagina inicial do sistema    <i class="fa-solid fa-heart fa-beat" style="--fa-beat-scale: 2.0;"></i></h1>
 </div>
 <section>
 
-    <script>
+    <script th:inline="javascript">
         document.getElementById("calendar").addEventListener("click", function () {
-            var myInit = {
-                auth: {
-                    username: 'admin',
-                    password: 'admin'
-                }
-            };
-            var myRequest = new Request('http://localhost:8080/calendar', myInit);
+
+            var myRequest = new Request('http://localhost:8080/calendar', userAuth);
             fetch(myRequest)
                 .then(function (response) {
                     console.log(response)
@@ -95,13 +90,8 @@
         })
         document.getElementById("listPaciente").addEventListener("click", function (e) {
             e.preventDefault();
-            var myInit = {
-                auth: {
-                    username: 'admin',
-                    password: 'admin'
-                }
-            };
-            var myRequest = new Request('http://localhost:8080/pacientesListar', myInit);
+
+            var myRequest = new Request('http://localhost:8080/pacientesListar', userAuth);
             fetch(myRequest)
                 .then(function (response) {
                     console.log(response)
@@ -114,13 +104,7 @@
         });
         document.getElementById("cadUsuario").addEventListener("click", function (e) {
             e.preventDefault();
-            var myInit = {
-                auth: {
-                    username: 'admin',
-                    password: 'admin'
-                }
-            };
-            var myRequest = new Request('http://localhost:8080/cadastrarUsuario', myInit);
+            var myRequest = new Request('http://localhost:8080/cadastrarUsuario', userAuth);
             fetch(myRequest)
                 .then(function (response) {
                     console.log(response)
