--- a/src/main/resources/templates/listpaciente.html
+++ b/src/main/resources/templates/listpaciente.html
@@ -1,3 +1,4 @@
+<script src="https://kit.fontawesome.com/59c7b81ae9.js" crossorigin="anonymous"></script>
 <div class="container">
     <table class="table">
         <thead>
@@ -12,6 +13,7 @@
             <th scope="col">UF</th>
             <th scope="col">Numero</th>
             <th scope="col">Complemento</th>
+            <th scope="col">Ações</th>
         </tr>
         </thead>
 
@@ -27,6 +29,10 @@
             <td th:text="${paciente.endereco.uf}"></td>
             <td th:text="${paciente.endereco.numero}"></td>
             <td th:text="${paciente.endereco.complemento}"></td>
+            <td>
+                <i class="fa-thin fa-pen">d</i>
+                <i class="fa-light fa-trash-can-undo"></i>
+            </td>
         </tr>
     </table>
 </div>
